impl/tests/macros/wrong_endianness.stderr
error: only BE or LE is allowed for endianness specifier
 --> $DIR/wrong_endianness.rs:9:39
  |
9 | #[register_map(base = 0, endianness = Le)]
  |                                       ^^
